# src/Dream.Space.Models/Companies/CompanyDetails.cs
@@ -1,22 +1,0 @@
-﻿using System;
-
-namespace Dream.Space.Models.Companies
-{
-    public class CompanyDetails
-    {
-        public string Ticker { get; set; }
-        public string Name { get; set; }
-        public string Sector { get; set; }
-        public string Industry { get; set; }
-        public string SummaryUrl { get; set; }
-        public DateTime LastUpdated { get; set; }
-        public decimal Volume { get; set; }
-        public decimal Price { get; set; }
-        public decimal HighestPrice52 { get; set; }
-        public decimal LowestPrice52 { get; set; }
-        public int ChaosPercentage { get; set; }
-        public bool UpdateSuccessful { get; set; }
-        public bool Filtered { get; set; }
-
-    }
-}
