# src/Dream.Space.Models/Companies/CompanyHeader.cs
@@ -9,8 +9,6 @@ namespace Dream.Space.Models.Companies
         {
             Ticker = company.Ticker;
             Name = company.Name;
-            Sector = company.Sector;
-            Industry = company.Industry;
             LastUpdated = company.LastUpdated;
             Volume = company.Volume;
             Price = company.Price;
@@ -19,6 +17,18 @@ namespace Dream.Space.Models.Companies
             ChaosPercentage = company.ChaosPercentage;
             UpdateSuccessful = company.UpdateSuccessful;
             UpdateError = company.UpdateError;
+            Filtered = company.Filtered;
+            MarketCap = company.MarketCap;
+            LastCalculated = company.LastCalculated;
+            NextReportDate = company.NextReportDate;
+            CalculatedSuccessful = company.CalculatedSuccessful;
+            CalculatedError = company.CalculatedError;
+            StartDate = company.StartDate;
+            EndDate = company.EndDate;
+            SectorId = company.SectorId;
+            IndustryId = company.IndustryId;
+            SP500 = company.SP500;
+            IsIndex = company.IsIndex;
         }
 
         public CompanyHeader()
@@ -26,11 +36,8 @@ namespace Dream.Space.Models.Companies
             LastUpdated = DateTime.Today.AddMonths(-1);
         }
 
-        public string FullName => $"{Ticker} - {Name}";
         public string Ticker { get; set; }
         public string Name { get; set; }
-        public string Sector { get; set; }
-        public string Industry { get; set; }
         public DateTime LastUpdated { get; set; }
         public decimal Volume { get; set; }
         public decimal Price { get; set; }
@@ -38,7 +45,20 @@ namespace Dream.Space.Models.Companies
         public decimal LowestPrice52 { get; set; }
         public int ChaosPercentage { get; set; }
         public bool UpdateSuccessful { get; set; }
+        public bool Filtered { get; set; }
+        public string FullName => $"{Ticker} - {Name}";
         public string UpdateError { get; set; }
 
+        public decimal MarketCap { get; set; }
+        public DateTime LastCalculated { get; set; }
+        public DateTime NextReportDate { get; set; }
+        public bool CalculatedSuccessful { get; set; }
+        public string CalculatedError { get; set; }
+        public DateTime StartDate { get; set; }
+        public DateTime EndDate { get; set; }
+        public int SectorId { get; set; }
+        public int IndustryId { get; set; }
+        public bool SP500 { get; set; }
+        public bool IsIndex { get; set; }
     }
 }
