# src/Dream.Space.Models/Quotes/QuotesModel.cs
@@ -13,23 +13,11 @@ namespace Dream.Space.Models.Quotes
 
         public DateTime Date { get; set; }
         public Decimal Close { get; set; }
-        public Decimal Volume {
-            get
-            {
-                decimal result = 0;
-                if (decimal.TryParse(VolumeAsText.Replace(",", ""), out result))
-                {
-                    return result;
-                }
-                return 0;
-            }
-            set { VolumeAsText = value.ToString(CultureInfo.InvariantCulture); }
-        }
+        public Decimal Volume { get; set;}
 
         public Decimal Open { get; set; }
         public Decimal High { get; set; }
         public Decimal Low { get; set; }
-        public string VolumeAsText { get; set; }
         public decimal Impulse { get; set; }
     }
 
